src/objects/Tenant__c.object
<CustomObject>
    <fields>
        <fullName>Monthly_Rate__c</fullName>
        <label>Monthly Rate</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Move_Out_Date__c</fullName>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Tenants</relationshipLabel>
        <relationshipName>Tenants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rent_Due_Date__c</fullName>
        <label>Rent Due Date</label>
        <type>Date</type>
    </fields>
    <label>Tenant</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tenant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>